<resources>
    <string name="app_name">FoodDilveryApp</string>
    <string name="foody">Food Ordering</string>
    <string name="welcome_to">Welcome to,</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Foody!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Fast Dilvery</string>
    <string name="slide_2_desc">Fast Dilvery to your Favourite Ones!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="signup_agreeone">By Selecting</string>
    <string name="signup_agreetwo"><u>"Sign Up"</u></string>
    <string name="signup_agreethree">You agree to our</string>


    <string name="send_link">Click on the button to verify email <b><u>Verify it.</u></b></string>
    <string name="privacy_policyone"><b><u>Terms and Use</u></b></string>
    <string name="privacy_policytwo">and consent to our</string>
    <string name="privacy_policythree"><b><u>Privacy Policy</u></b></string>

</resources>