<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_mainlogo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/lobster"
            android:text="Foody"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:autofillHints="Email Address"
                android:background="@android:color/transparent"
                android:fontFamily="@font/calibri"
                android:gravity="center|start"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_below="@id/ll_email"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_name" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:autofillHints="Password"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/calibri"
                    android:gravity="center|start"
                    android:hint="Full Name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>




        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_below="@id/ll_password"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:autofillHints="Password"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/calibri"
                    android:gravity="center|start"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/ll_confirm_password"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:autofillHints="Password"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/calibri"
                    android:gravity="center|start"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>


        </LinearLayout>


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/ll_spinner_gender"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/et_bg"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_phone" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_phnumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:autofillHints="Password"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/calibri"
                    android:gravity="center|start"
                    android:hint="Phone No."
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>



        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/calibri"
            android:gravity="center"
            android:text="SignUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/signup_agreeone"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvTwo"
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/signup_agreetwo"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvThree"
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/signup_agreethree"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_text"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/privacy_policyone"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/privacy_policytwo"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_margin="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/privacy_policythree"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>





    </RelativeLayout>


</LinearLayout>